# simulation-retraite-pyqt

./: .coverage  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
core/: __init__.py  employee.py  germes.py  logger.py  retiree.py  scenario.py  simulator.py
data/config/: README.md  parametres.json
data/output/: README.md  resultats.csv
tests/: README.md  conftest.py  test_charts.py  test_fileio.py  test_logger.py  test_simulator.py  test_stats.py  test_structure.py  test_theme.py  test_ui_shortcuts.py  test_widgets.py
ui/: __init__.py  dialogs.py  graph_window.py  menu_window.py  progress_dialog.py  report_window.py  settings_window.py  simulation_window.py  theme.py
ui/charts_window/: __init__.py  charts_window.py  logger.py  scenario_selector.py  tab_comparaison.py  tab_confidence.py  tab_reserve.py
ui/csv_import_window/: __init__.py  csv_import_window.py  logger.py  tab_by_year.py  tab_by_year_filtered.py  tab_interactive.py  tab_summary.py
ui/results_window/: __init__.py  logger.py  results_window.py  tab_by_year.py  tab_by_year_filtered.py  tab_csv_export.py  tab_csv_import.py  tab_interactive.py  tab_summary.py
ui/tabs_shared/: __init__.py  base_tab_by_year.py  base_tab_filtered.py  base_tab_interactive.py  base_tab_summary.py
ui/widgets/: __init__.py  animated_tool_button.py  csv_table_widget.py  fade_tab_widget.py  fade_widget.py  hybrid_graph_widget.py  plot_helpers.py  report_export_dialog.py  sort_dialog.py
utils/: __init__.py  charts.py  csv_sort_utils.py  fileio.py  logger.py  mpl_theme.py  pdf_export.py  stats.py  theme_utils.py
